# lidarTool

./: CMakeLists.txt  CMakeLists.txt~  DataTypes.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  lidar.pro
DataStructures/: Grid.cpp  Grid.h
Dialogs/: DialogFilter.cpp  DialogFilter.h  DialogFilter.ui  DialogGSDFilter.cpp  DialogGSDFilter.h  DialogGSDFilter.ui
Filters/: AverageDeviation.cpp  AverageDeviation.h  Filter.cpp  Filter.h  GSDFilter.cpp  GSDFilter.h  StandardDeviation.cpp  StandardDeviation.h
Forms/: FormAverageDeviation.cpp  FormAverageDeviation.h  FormAverageDeviation.ui  FormRegularGrid.cpp  FormRegularGrid.h  FormRegularGrid.ui  FormStandardDeviation.cpp  FormStandardDeviation.h  FormStandardDeviation.ui
Grids/: Grid.cpp  Grid.h  GridCell.cpp  GridCell.h  RegularGrid.cpp  RegularGrid.h
